--- a/trunk/UpccModel/Upcc.csproj
+++ b/trunk/UpccModel/Upcc.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{45CFA9B7-56EC-4986-BEAF-079F86A56B0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UpccModel</RootNamespace>
-    <AssemblyName>UpccModel</AssemblyName>
+    <RootNamespace>Upcc</RootNamespace>
+    <AssemblyName>Upcc</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -67,7 +67,7 @@
     <Compile Include="UpccDependencies.cs" />
     <Compile Include="UpccEnumerationLiterals.cs" />
     <Compile Include="UpccEnumerations.cs" />
-    <Compile Include="UpccModel.cs" />
+    <Compile Include="MetaModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpccModelLibraries.cs" />
     <Compile Include="UpccPackages.cs" />
