--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -205,9 +205,9 @@
       <Project>{D788A632-CD92-4C8A-AE54-A37CD5871368}</Project>
       <Name>CctsRepository</Name>
     </ProjectReference>
-    <ProjectReference Include="..\UpccModel\UpccModel.csproj">
+    <ProjectReference Include="..\UpccModel\Upcc.csproj">
       <Project>{45CFA9B7-56EC-4986-BEAF-079F86A56B0C}</Project>
-      <Name>UpccModel</Name>
+      <Name>Upcc</Name>
     </ProjectReference>
     <ProjectReference Include="..\VIENNAAddInUtils\VIENNAAddInUtils.csproj">
       <Project>{3C1352B8-1B53-46F9-BC18-BFF48115A606}</Project>
