--- a/trunk/UpccModel/Upcc.csproj
+++ b/trunk/UpccModel/Upcc.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cardinality.cs" />
+    <Compile Include="MetaCardinality.cs" />
     <Compile Include="MetaAbstractClass.cs" />
     <Compile Include="MetaAssociation.cs" />
     <Compile Include="MetaAttribute.cs" />
@@ -57,23 +57,23 @@
     <Compile Include="MetaEnumerationLiteral.cs" />
     <Compile Include="MetaPackage.cs" />
     <Compile Include="MetaTaggedValue.cs" />
-    <Compile Include="PackageClassifierContainmentRelation.cs" />
-    <Compile Include="PackageContainmentRelation.cs" />
-    <Compile Include="UpccAbstractClasses.cs" />
-    <Compile Include="UpccAssociations.cs" />
-    <Compile Include="UpccAttributes.cs" />
-    <Compile Include="UpccClasses.cs" />
-    <Compile Include="UpccDataTypes.cs" />
-    <Compile Include="UpccDependencies.cs" />
-    <Compile Include="UpccEnumerationLiterals.cs" />
-    <Compile Include="UpccEnumerations.cs" />
+    <Compile Include="MetaPackageClassifierRelation.cs" />
+    <Compile Include="MetaSubPackageRelation.cs" />
+    <Compile Include="AbstractClasses.cs" />
+    <Compile Include="Associations.cs" />
+    <Compile Include="Attributes.cs" />
+    <Compile Include="Classes.cs" />
+    <Compile Include="DataTypes.cs" />
+    <Compile Include="Dependencies.cs" />
+    <Compile Include="EnumerationLiterals.cs" />
+    <Compile Include="Enumerations.cs" />
     <Compile Include="MetaModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpccModelLibraries.cs" />
-    <Compile Include="UpccPackages.cs" />
-    <Compile Include="UpccTaggedValues.cs" />
-    <Compile Include="UpccPackageClassifierContainmentRelations.cs" />
-    <Compile Include="UpccPackagePackageContainmentRelations.cs" />
+    <Compile Include="MetaStereotype.cs" />
+    <Compile Include="Packages.cs" />
+    <Compile Include="TaggedValues.cs" />
+    <Compile Include="PackageClassifierRelations.cs" />
+    <Compile Include="PackageSubPackageRelations.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
