--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -143,16 +143,17 @@
     <Compile Include="upcc3\ccts\otf\ValidatingCCRepositoryIntegrationTests.cs" />
     <Compile Include="upcc3\ccts\util\MultiPartTaggedValueTests.cs" />
     <Compile Include="upcc3\import\cctsndr\BDTXsdImporterTests.cs" />
+    <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryBdtEditor.cs" />
     <Compile Include="upcc3\Wizards\dev\ui\AbieEditorFormTest.cs" />
     <Compile Include="upcc3\Wizards\dev\cache\CcCacheTest.cs" />
     <Compile Include="upcc3\Wizards\dev\ui\BdtEditorFormTest.cs" />
     <Compile Include="upcc3\Wizards\dev\ui\StandardLibraryImporterFormTest.cs" />
     <Compile Include="upcc3\Wizards\dev\ui\UpccModelCreatorFormTest.cs" />
-    <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryABIEEditor.cs" />
+    <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryAbieEditor.cs" />
     <Compile Include="upcc3\Wizards\dev\util\TemporaryABIEModelTest.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryLibraryImporter.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryModelCreator.cs" />
-    <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryCCCache.cs" />
+    <Compile Include="upcc3\Wizards\dev\TestRepository\EARepositoryCcCache.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryResourceHandler.cs" />
     <Compile Include="upcc3\Wizards\XsdImporterFormTest.cs" />
     <Compile Include="upcc3\Wizards\UPCCModelWizardFormTest.cs" />
