--- a/trunk/CctsRepository/CctsRepository.csproj
+++ b/trunk/CctsRepository/CctsRepository.csproj
@@ -45,6 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BdtLibrary\BdtLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BdtLibrarySpec.tt</DependentUpon>
+    </Compile>
     <Compile Include="BdtLibrary\IBdtLibrary.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -52,30 +57,50 @@
     </Compile>
     <Compile Include="BieLibrary\AsbieAggregationKind.cs" />
     <Compile Include="BieLibrary\AbieSpec.cs" />
-    <Compile Include="BdtLibrary\BdtLibrarySpec.cs" />
-    <Compile Include="BieLibrary\BieLibrarySpec.cs" />
+    <Compile Include="BieLibrary\BieLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BieLibrarySpec.tt</DependentUpon>
+    </Compile>
     <Compile Include="BieLibrary\IBieLibrary.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>IBieLibrary.tt</DependentUpon>
     </Compile>
-    <Compile Include="bLibrary\BLibrarySpec.cs" />
+    <Compile Include="bLibrary\BLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BLibrarySpec.tt</DependentUpon>
+    </Compile>
     <Compile Include="bLibrary\IBLibrary.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>IBLibrary.tt</DependentUpon>
     </Compile>
-    <Compile Include="CcLibrary\CcLibrarySpec.cs" />
+    <Compile Include="CcLibrary\CcLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CcLibrarySpec.tt</DependentUpon>
+    </Compile>
     <Compile Include="CcLibrary\ICcLibrary.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ICcLibrary.tt</DependentUpon>
     </Compile>
-    <Compile Include="CdtLibrary\CdtLibrarySpec.cs" />
+    <Compile Include="CdtLibrary\CdtLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CdtLibrarySpec.tt</DependentUpon>
+    </Compile>
     <Compile Include="CdtLibrary\ICdtLibrary.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ICdtLibrary.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DocLibrary\DocLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DocLibrarySpec.tt</DependentUpon>
     </Compile>
     <Compile Include="DocLibrary\IAsma.cs" />
     <Compile Include="DocLibrary\IDocLibrary.cs">
@@ -86,7 +111,11 @@
     <Compile Include="DocLibrary\IDocLibraryManualExtensions.cs" />
     <Compile Include="DocLibrary\IMa.cs" />
     <Compile Include="DocLibrary\MaSpec.cs" />
-    <Compile Include="EnumLibrary\EnumLibrarySpec.cs" />
+    <Compile Include="EnumLibrary\EnumLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EnumLibrarySpec.tt</DependentUpon>
+    </Compile>
     <Compile Include="EnumLibrary\IdSchemeSpec.cs" />
     <Compile Include="EnumLibrary\IEnumLibrary.cs">
       <AutoGen>True</AutoGen>
@@ -99,7 +128,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>IPrimLibrary.tt</DependentUpon>
     </Compile>
-    <Compile Include="PrimLibrary\PrimLibrarySpec.cs" />
     <Compile Include="CcLibrary\AccSpec.cs" />
     <Compile Include="BieLibrary\AsbieSpec.cs" />
     <Compile Include="CcLibrary\AsccSpec.cs" />
@@ -121,29 +149,57 @@
     <Compile Include="CcLibrary\IBcc.cs" />
     <Compile Include="BdtLibrary\IBdt.cs" />
     <Compile Include="BdtLibrary\IBdtCon.cs" />
+    <None Include="BdtLibrary\BdtLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>BdtLibrarySpec.cs</LastGenOutput>
+    </None>
     <None Include="BdtLibrary\IBdtLibrary.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>IBdtLibrary.cs</LastGenOutput>
+    </None>
+    <None Include="BieLibrary\BieLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>BieLibrarySpec.cs</LastGenOutput>
     </None>
     <None Include="BieLibrary\IBieLibrary.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>IBieLibrary.cs</LastGenOutput>
     </None>
+    <None Include="bLibrary\BLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>BLibrarySpec.cs</LastGenOutput>
+    </None>
     <None Include="bLibrary\IBLibrary.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>IBLibrary.cs</LastGenOutput>
+    </None>
+    <None Include="CcLibrary\CcLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>CcLibrarySpec.cs</LastGenOutput>
     </None>
     <None Include="CcLibrary\ICcLibrary.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ICcLibrary.cs</LastGenOutput>
     </None>
+    <None Include="CdtLibrary\CdtLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>CdtLibrarySpec.cs</LastGenOutput>
+    </None>
     <None Include="CdtLibrary\ICdtLibrary.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ICdtLibrary.cs</LastGenOutput>
     </None>
+    <None Include="DocLibrary\DocLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DocLibrarySpec.cs</LastGenOutput>
+    </None>
     <None Include="DocLibrary\IDocLibrary.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>IDocLibrary.cs</LastGenOutput>
+    </None>
+    <None Include="EnumLibrary\EnumLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>EnumLibrarySpec.cs</LastGenOutput>
     </None>
     <None Include="EnumLibrary\IEnumLibrary.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -153,9 +209,15 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>IPrimLibrary.cs</LastGenOutput>
     </None>
+    <None Include="PrimLibrary\PrimLibrarySpec.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>PrimLibrarySpec.cs</LastGenOutput>
+    </None>
     <None Include="t4\helpers.tt">
     </None>
     <None Include="t4\LibraryInterface.tt">
+    </None>
+    <None Include="t4\LibrarySpec.tt">
     </None>
     <Compile Include="bLibrary\IBLibraryOld.cs" />
     <Compile Include="ICctsRepository.cs" />
@@ -166,7 +228,11 @@
     <Compile Include="EnumLibrary\IEnum.cs" />
     <Compile Include="PrimLibrary\IPrim.cs" />
     <Compile Include="BdtLibrary\IBdtSup.cs" />
-    <Compile Include="DocLibrary\DocLibrarySpec.cs" />
+    <Compile Include="PrimLibrary\PrimLibrarySpec.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PrimLibrarySpec.tt</DependentUpon>
+    </Compile>
     <Compile Include="PrimLibrary\PrimSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BdtLibrary\BdtSupSpec.cs" />
