--- a/UpccModel/Upcc.csproj
+++ b/UpccModel/Upcc.csproj
@@ -55,6 +55,7 @@
     <Compile Include="MetaDependency.cs" />
     <Compile Include="MetaEnumeration.cs" />
     <Compile Include="MetaEnumerationLiteral.cs" />
+    <Compile Include="MetaMultiType.cs" />
     <Compile Include="MetaPackage.cs" />
     <Compile Include="MetaTaggedValue.cs" />
     <Compile Include="MetaPackageClassifierRelation.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="EnumerationLiterals.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="MetaModel.cs" />
+    <Compile Include="MultiTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MetaStereotype.cs" />
     <Compile Include="Packages.cs" />
